# watchtower-rs

./: Cargo.toml  README.md  docker-compose.yml
src/: auth.rs  error.rs  main.rs  types.rs
src/resources/: mod.rs  registry.rs  task_runner.rs
src/routes/v1/: services.rs
watchtower/: Cargo.toml  Dockerfile
watchtower-client/: Cargo.toml
watchtower-client/src/: error.rs  lib.rs
watchtower-client/src/resources/: http_client.rs
watchtower-client/tests/: integration_test.rs
watchtower/src/: error.rs  main.rs  types.rs
watchtower/src/resources/: dispatcher.rs  mod.rs  registry.rs  task_runner.rs
watchtower/src/routes/v1/: health.rs  mod.rs  services.rs
watchtower/src/utils/: env.rs
watchtower_client/src/: lib.rs
