[package]
name = "watchtower-rs"
version = "0.1.0"
authors = ["Warunyou Dej-Udom <warunyou_d@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1.0", features = ["sync"] }
actix-web = "4.0.0-beta.8"
futures-util = "0.3"
base64 = "0.13"
derive_more = "0.99"
env_logger = "0.8"
serde = "1"
serde_json = "1"
rand = "0.8"
actix = "0.12"