[package]
name = "watchtower-client"
version = "0.1.0"
authors = ["Warunyou Dej-Udom <warunyou_d@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["sync"] }
reqwest = { version = "0.10", features = ["json"] }
actix = "0.10"
futures-util = "0.3"
serde = "1"
serde_json = "1"
rand = "0.8"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"

[dev-dependencies]
mockito = "0.8"
actix-rt = "1.1"